# nuxt-wgpu

./: .gitignore  Cargo.toml  build-wasm.sh  build.rs  index.html  nuxt.config.js  package.json
pages/: index.vue
src/: lib.rs  main.rs
