[package]
name = "nuxt-wgpu"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
wgpu = "0.6"
winit = "0.23"
env_logger = "0.7"
log = "0.4"
anyhow = "1.0"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.subscriber]
package = "wgpu-subscriber"
version = "0.1"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
shaderc = "0.6"